tests/snapshots/integration__integration_tests__switch__switch_missing_argument_hints.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
[1m[31merror:[0m the following required arguments were not provided:
  [1m[32m<BRANCH>

[1m[32mUsage:[0m [1m[36mwt switch[0m [36m<BRANCH>[0m [1m[36m[--[0m [36m<EXECUTE_ARGS>...[0m[1m[36m]

For more information, try '[1m[36m--help[0m'.

[32m[1mQuick switches:[39m[22m
  [36m[1mwt switch ^[39m[22m    default branch's worktree
  [36m[1mwt switch -[39m[22m    previous worktree
  [36m[1mwt select[39m[22m      interactive picker
