tests/snapshots/integration__integration_tests__switch__switch_no_config_commands_skips_post_start.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - no-post-start
    - "--no-config-commands"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpqatjYg
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mno-post-start[0m[0m
  [2mPath: [REPO]/../test-repo.no-post-start[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
