tests/snapshots/integration__integration_tests__switch__switch_no_hooks_existing.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - existing-no-hooks
    - "--execute"
    - "echo 'execute still runs'"
    - "--no-hooks"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpRegQEi/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
✅ [32mSwitched to worktree for [1m[32mexisting-no-hooks[0m at [WORKTREE_EXISTING_NO_HOOKS][0m
🔄 [36mExecuting (--execute):[0m
[40m [0m [1m[34mecho [32m'execute still runs'

execute still runs

----- stderr -----
